# tarot

./: .gitignore  Dockerfile  Makefile  README.md  fly.toml  nginx.conf  prettier.config.js  run.sh  tsconfig.json
common/: types.d.ts
scripts/: cards  cards.json  cards_v2.json  major_arcana.json  proc.py  pyproject.toml
server/: package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json
server/src/: cards.json  index.ts  tarot.ts
tarot-backend/: package.json  pnpm-lock.yaml  tsconfig.json
tarot-backend/public/: foo.bpm
tarot-backend/src/: all_cards.json  cards.json  index.ts  tarot.ts  toobig.txt
tarot-frontend/: .gitignore  2  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
tarot-frontend/src/: App.css  App.tsx  Card.css  Card.tsx  api.ts  theme.css
web/: Dockerfile  package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.css  App.tsx  Card.tsx  api.ts  container.css  index.css
